# ai-video-maker

./: .gitignore  LICENSE  README.md  pipeline.example.yml  pyproject.toml  requirements.txt
docs/: AI视频制作助手项目定位与工程方案.md  CapabilityAdapterP0.md  Harness工程搭建计划.md  Pipeline配置Schema.md  Skills安装指南.md  Skills工作流架构.md  TODO-功能实现路线图.md  使用指南.md  实操记录-AIVideoMaker自我介绍横屏Demo.md  实操记录-BrowserAdapterP1本地页面检查.md  实操记录-P0Harness自我介绍Demo.md  实操记录-P1PipelineHarness自我介绍Demo.md  实操记录-SkillsFirst自我介绍Demo.md  开发规划-P1到P9.md  方案A安装配置记录.md  环境部署提示词.md  能力适配器与GUI工具策略.md  视频制作工具链调研与执行方案.md  需求对齐到视频发布工作流.md
examples/browser-local-demo/: index.html
samples/: demo_narration.txt
scripts/: create_smoke_frame.py  install_skills.py  render_smoke_video.py  run_smoke_test.sh
skills/: manifest.yml
skills/ai-video-maker/: SKILL.md
skills/browser-capture/: SKILL.md
skills/chrome-capture/: SKILL.md
skills/desktop-capture/: SKILL.md
skills/edit-render/: SKILL.md
skills/publish-package/: SKILL.md
skills/qa-revision/: SKILL.md
skills/terminal-capture/: SKILL.md
tests/: test_browser_actions.py  test_browser_adapter.py  test_browser_capture_workflow.py  test_capabilities.py  test_cli.py  test_context_and_artifacts.py  test_edit_render_workflow.py  test_gui_capture_workflow.py  test_orchestrator.py  test_pipeline.py  test_publish_package_workflow.py  test_qa_revision_workflow.py  test_revision_workflow.py  test_script_workflow.py  test_skill_distribution.py  test_srt.py  test_stages.py  test_terminal_capture_workflow.py  test_voice_subtitle_workflow.py  test_youtube_upload_workflow.py
(+46 files in other folders)
