[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-video-maker"
version = "0.1.0"
description = "AI-assisted workflow for planning, narrating, rendering, QA, and packaging explanation videos."
requires-python = ">=3.12"
dependencies = [
  "edge-tts",
  "moviepy",
  "auto-editor",
  "openai-whisper",
  "PyYAML",
]

[project.scripts]
ai-video-maker = "ai_video_maker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
